@@ -41,6 +41,12 @@ Release date: TBA
 
   Closes #6028
 
+* Fix false positive regression in 2.13.0 for ``used-before-assignment`` for
+  homonyms between variable assignments in except blocks and earlier attribute
+  access in the test of a filtered comprehension.
+
+  Closes #6035
+
 
 What's New in Pylint 2.13.3?
 ============================
